--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <!-- Meta Description -->
+      <meta name="description" content="Portfolio Dewi, seorang desainer web dan developer front-end serta back-end dengan pengalaman dalam membuat website yang kreatif dan fungsional. Menyediakan layanan desain UI/UX dan pengembangan web untuk bisnis dan individu.">
+  
+      <!-- Meta Keywords -->
+      <meta name="keywords" content="portfolio, desainer web, developer, front-end, back-end, UI/UX, desain web, pengembangan web, jasa website, desain grafis, web developer Indonesia">
+  
+      <!-- Meta Author -->
+      <meta name="author" content="Dewi">
+  
+      <!-- Open Graph Meta Tags (untuk sosial media) -->
+      <meta property="og:title" content="Portfolio Dewi - Desainer Web & Developer Front-End dan Back-End">
+      <meta property="og:description" content="Lihat portfolio Dewi, desainer web dan developer dengan pengalaman dalam membangun website kreatif, UI/UX, dan solusi pengembangan web.">
+      <meta property="og:image" content="URL_gambar_thumbnail_atau_logo.jpg">
+      <meta property="og:url" content="https://portfolio-dewi-fatimah-tuzahro.vercel.app/">
+      <meta property="og:type" content="website">
+  
+      <!-- Twitter Card Meta Tags -->
+      <meta name="twitter:card" content="summary_large_image">
+      <meta name="twitter:title" content="Portfolio Dewi - Desainer Web & Developer Front-End dan Back-End">
+      <meta name="twitter:description" content="Portfolio Dewi, seorang desainer web dan developer dengan pengalaman dalam membuat website yang kreatif dan fungsional.">
+      <meta name="twitter:image" content="URL_gambar_thumbnail_atau_logo.jpg">
+      <meta name="twitter:site" content="@handleTwitterAnda">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" >
     <link rel="stylesheet" href="dist/css/build.css" />
 		<!-- <link rel="shortcut icon" href="dist/img/tailwind-css.svg" type="image/x-icon" /> -->
